forgot to add some files for Google Auth

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,11 @@
         <link rel="stylesheet" href="assets/styles/main.css">
         <link rel="stylesheet" href="assets/styles/tatami.css">
 
+        <!-- spinner stuff
+        <script type="text/javascript" src="http://fgnass.github.io/spin.js/spin.min.js"></script>
+        <script type="text/javascript" src="angular-spinner.js"></script>
+        <script src="script.js"></script>-->
+
         <!-- endbuild -->
 
         <style>
@@ -59,7 +64,8 @@
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="/bower_components/angular-spinner/angular-spinner.js"></script>
+        <script src="/bower_components/spin.js/spin.js"></script>
         <script src="bower_components/angular-aria/angular-aria.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
         <script src="bower_components/angular-cache-buster/angular-cache-buster.js"></script>
