--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -70,9 +70,11 @@
         <script src="app/shared/services/login.service.js"></script>
         <script src="app/shared/services/path.service.js"></script>
         <script src="app/shared/services/localStorage.service.js"></script>
+        <script src="app/shared/services/tag.service.js"></script>
 
         <script src="app/shared/state/profile/profile.controller.js"></script>
         <script src="app/shared/state/conversation/conversation.controller.js"></script>
+        <script src="app/shared/state/tag/tag.controller.js"></script>
 
         <script src="app/shared/status/list/status.list.directive.js"></script>
         <script src="app/shared/status/status.directive.js"></script>
