--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -173,7 +173,6 @@
     <script src="scripts/app/about/about.js"></script>
     <script src="scripts/app/account/profile/profile.js"></script>
     <script src="scripts/app/account/account.controller.js"></script>
-    <script src="scripts/app/account/tags/tags.js"></script>
     <script src="scripts/app/account/tags/tags.controller.js"></script>
     <script src="scripts/app/account/files/files.js"></script>
     <script src="scripts/app/account/files/files.controller.js"></script>
@@ -233,6 +232,7 @@
     <script src="scripts/app/account/tags/following/following.js"></script>
     <script src="scripts/app/account/tags/search/search.js"></script>
     <script src="scripts/app/account/tags/trends/trends.js"></script>
+    <script src="scripts/components/auth/services/files.service.js"></script>
 
 
 </body>
