Center the user image and fix the size

--- a/mobile/www/app/shared/user/user-detail.html
+++ b/mobile/www/app/shared/user/user-detail.html
@@ -1,7 +1,7 @@
 <ion-item>
     <div class="row">
-        <div class="col-offset-20 col-40">
-            <img ng-src="{{ vm.user.avatarURL }}" class="img-rounded" >
+        <div class="col">
+            <img ng-src="{{ vm.user.avatarURL }}" class="center" height="200px" width="200px" style="border-radius: 15px;">
         </div>
     </div>
 
