Add button to follow users

--- a/mobile/www/app/shared/state/profile/profile.html
+++ b/mobile/www/app/shared/state/profile/profile.html
@@ -1,4 +1,10 @@
-<ion-view view-title="{{ 'user.profile.title' | translate }}">
+<ion-view view-title="@{{ vm.user.username }}">
+    <ion-nav-buttons side="secondary">
+        <button class="button ion-person-add"
+                ng-class="{ 'button-calm' : vm.user.friend, 'button-stable button-outline' : !vm.user.friend }"
+                style="font-size: 30px;"
+                ng-click="vm.followUser()"></button>
+    </ion-nav-buttons>
     <ion-content>
         <ion-refresher on-refresh="vm.getNewStatuses()"></ion-refresher>
         <tatami-user-detail user="vm.user"></tatami-user-detail>
