Added validation on domains for user management console. Fixed an issue where users couldn't be created

--- a/src/main/webapp/scripts/app/admin/user-management/user-management-detail.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-detail.html
@@ -1,5 +1,5 @@
 <div>
-    <h2><span translate="user-management.detail.title">User</span> "{{user.login}}"</h2>
+    <h2><span translate="user-management.detail.title">User</span> "{{user.email}}"</h2>
 
     <div class="table-responsive">
         <table class="table table-striped">
