Fixed merge errors

--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -22,6 +22,7 @@
                         <div class="controls">
                             <input type="password" required="required" size="15" maxlength="40" class="form-control" ng-model="password.newPasswordConfirmation">
                             <!-- NOT SURE WHAT THIS IS DOING HERE<div>
+                            <div>
                                 <label translate="account.password.warning" style="color: red"></label>
                             </div> -->
                         </div>
