Display attachments and open them in the inappbrowser

--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -30,6 +30,11 @@
             <span translate="status.reply">In reply to </span>
             <span class="link-span" ng-click="vm.goToConversation(vm.status.replyTo)">@{{ vm.status.replyToUsername }}</span>
         </p>
+        <p ng-repeat="attachment in vm.status.attachments">
+            <a ng-href="{{ vm.buildAttachmentUrl(attachment) }}">
+                <i class="ion-document-text"></i> {{ attachment.filename }}
+            </a>
+        </p>
     </div>
     <div class="row">
         <div class="col-25 button button-clear ion-chatbox tatami-button" ng-click="vm.postReply()"></div>
