--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -27,7 +27,7 @@
 
         <!-- your app's js -->
         <script src="app/tatamiApp.js"></script>
-        <script src="app/tatamiApp.constants.js"></script>
+        <script src="app/tatami.endpoint.js"></script>
         <script src="app/tatami.controller.js"></script>
 
         <script src="app/components/login/login.js"></script>
