Initial commit for tatami tour in jhipster branch. basically done, but needs testing ccs tweaking.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
         </style>
 
     </head>
-    <body ng-app="tatamiJHipsterApp">
+    <body ng-app="tatamiJHipsterApp" ui-tour>
         <toast></toast>
         <!--[if lt IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -85,6 +85,12 @@
         <!-- endbower -->
         <!-- endbuild -->
         <script src="bower_components/openlayers/lib/OpenLayers.js"></script>
+
+
+        <script src="bower_components/ngSmoothScroll/lib/angular-smooth-scroll.js"></script>
+        <script src="bower_components/ez-ng/dist/ez-ng.js"></script>
+        <script src="bower_components/angular-hotkeys/build/hotkeys.js"></script>
+        <script src="bower_components/angular-ui-tour/dist/angular-ui-tour.js"></script>
 
 
     <!-- build:js({.tmp,src/main/webapp}) scripts/app.js -->
