--- a/src/main/webapp/scripts/app/home/timeline/timeline/timelineHeader.html
+++ b/src/main/webapp/scripts/app/home/timeline/timeline/timelineHeader.html
@@ -22,22 +22,22 @@
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
             <h3 tour-step
-                order="1"
-                title="<b>{{ 'home.welcome.timeline.title' | translate }}</b>"
-                content="{{ 'home.welcome.timeline.line1' | translate }}
+                tour-step-order="1"
+                tour-step-title="{{ 'global.welcome.timeline.title' | translate }}"
+                tour-step-content="{{ 'global.welcome.timeline.line1' | translate }}
                 <ul>
-                    <li>{{ 'tatami.welcome.timeline.bulletPoint1' | translate }}</li>
-                    <li>{{ 'tatami.welcome.timeline.bulletPoint2' | translate }}</li>
-                    <li>{{ 'tatami.welcome.timeline.bulletPoint3' | translate }}</li>
-                    <li>{{ 'tatami.welcome.timeline.bulletPoint4' | translate }}</li>
+                    <li>{{ 'global.welcome.timeline.bulletPoint1' | translate }}</li>
+                    <li>{{ 'global.welcome.timeline.bulletPoint2' | translate }}</li>
+                    <li>{{ 'global.welcome.timeline.bulletPoint3' | translate }}</li>
+                    <li>{{ 'global.welcome.timeline.bulletPoint4' | translate }}</li>
                 </ul>
-                <p>{{ 'tatami.welcome.timeline.afterBP1' | translate }}</p>
-                <p>{{ 'tatami.welcome.timeline.afterBP2' | translate }}</p>
-                <p>{{ 'tatami.welcome.timeline.afterBP3' | translate }}</p>
+                <p>{{ 'global.welcome.timeline.afterBP1' | translate }}</p>
+                <p>{{ 'global.welcome.timeline.afterBP2' | translate }}</p>
+                <p>{{ 'global.welcome.timeline.afterBP3' | translate }}</p>
                 <br>"
-                placement="left"
-                skip="false"
-                on-end="onTourEnd(tour)">
+                tour-step-placement="left-top"
+                tour-step-skip="false"
+                tour-step-on-end="onTourEnd(tour)">
                 <strong ng-if="currentState == 'timeline'" translate="home.timeline"></strong>
                 <strong ng-if="currentState == 'mentions'" translate="home.mentions"></strong>
                 <strong ng-if="currentState == 'favorites'" translate="home.favorites"></strong>
