--- a/mobile/www/app/shared/status/list/status-list.html
+++ b/mobile/www/app/shared/status/list/status-list.html
@@ -5,5 +5,5 @@
             <tatami-status status="status" current-user="vm.currentUser" on-delete="vm.remove(status)"></tatami-status>
         </ion-item>
     </ion-list>
-    <ion-infinite-scroll ng-if="vm.finishedTimeline || !vm.$state.includes('*.conversation')" on-infinite="vm.getNewInfiniteScrollStatuses()"></ion-infinite-scroll>
+    <ion-infinite-scroll ng-if="!vm.finishedTimeline && !vm.$state.includes('*.conversation')" on-infinite="vm.getNewInfiniteScrollStatuses()"></ion-infinite-scroll>
 </ion-content>
