--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -57,7 +57,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="input-xlarge btn btn-primary btn-block"translate="account.form.save" ng-click="updateUser()"></button>
+                        <button type="submit" class="input-xlarge btn btn-primary btn-block"translate="form.save" ng-click="updateUser()"></button>
                     </div>
                 </div>
             </form>
