--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="return"></div>
                     <div class="form-actions">
-                        <button type="submit" class="btn btn-primary btn-block" translate="account.form.save" ng-click="changePassword()"></button>
+                        <button type="submit" class="btn btn-primary btn-block" translate="form.save" ng-click="changePassword()"></button>
                     </div>
                 </fieldset>
             </form>
