--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/ngToast/dist/ngToast.css" />
+        <link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.css" />
         <!-- endbower -->
         <!--link rel="stylesheet" href= "assets/styles/bootstrap.css" />
 
