Remove label on password panel that appears to be nonfunctional

--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -21,9 +21,9 @@
                         <label class="control-label" translate="account.password.confirm"></label>
                         <div class="controls">
                             <input type="password" required="required" size="15" maxlength="40" class="form-control" ng-model="password.newPasswordConfirmation">
-                            <div>
+                            <!-- NOT SURE WHAT THIS IS DOING HERE<div>
                                 <label translate="account.password.warning" style="color: red"></label>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="return"></div>
