--- a/src/main/webapp/scripts/app/account/groups/list/recommended/recommended.html
+++ b/src/main/webapp/scripts/app/account/groups/list/recommended/recommended.html
@@ -1,1 +1,1 @@
-<tatami-group-list user-groups="getRecommended"></tatami-group-list>
+<tatami-group-list user-groups="userGroups"></tatami-group-list>
