finished users and group pages, minor changes

--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -55,7 +55,7 @@
                                                 <span translate="account.files.title"></span>
                                             </a>
                                         </li>
-                                        <li ui-sref-active="active">
+                                        <li ng-class="{ 'active': $state.includes('users') }">
                                             <a ui-sref="following">
                                                 <span class="glyphicon glyphicon-globe"></span>
                                                 <span translate="account.users.title"></span>
