Added support for a new directive for statusLists to be used later everywhere that statusList.controller.js is currently used (refactoring)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -132,6 +132,8 @@
     <script src="scripts/app/login/register/register.controller.js"></script>
     <script src="scripts/app/account/settings/settings.js"></script>
     <script src="scripts/app/account/settings/settings.controller.js"></script>
+    <script src="scripts/app/shared/status/list/tatamiStatusList.directive.js"></script>
+    <script src="scripts/app/home/timeline/timeline/content.controller.js"></script>
     <script src="scripts/app/login/reset/finish/reset.finish.controller.js"></script>
     <script src="scripts/app/login/reset/finish/reset.finish.js"></script>
     <script src="scripts/app/login/reset/request/reset.request.controller.js"></script>
