--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -241,6 +241,10 @@
     <script src="scripts/components/auth/services/group.service.js"></script>
         <script src="scripts/components/auth/services/stats.service.js"></script>
     <script src="scripts/app/home/timeline/statuslist/statusList.controller.js"></script>
+        <script src="scripts/app/home/timeline/group/statuses/groupStatuses.js"></script>
+        <script src="scripts/app/home/timeline/group/members/members.js"></script>
+        <script src="scripts/app/home/timeline/group/group.controller.js"></script>
+        <script src="scripts/app/home/timeline/group/group.js"></script>
     <script src="scripts/app/home/presentation/presentation.js"></script>
     <script src="scripts/app/home/presentation/welcome.controller.js"></script>
     <script src="scripts/app/shared/filters/EmoticonFilter.js"></script>
@@ -258,6 +262,7 @@
     <script src="scripts/app/account/tags/search/search.js"></script>
     <script src="scripts/app/account/tags/trends/trends.js"></script>
     <script src="scripts/components/auth/services/files.service.js"></script>
+
 
 
 </body>
