--- a/src/main/webapp/scripts/app/shared/status/list/tatamiStatusList.html
+++ b/src/main/webapp/scripts/app/shared/status/list/tatamiStatusList.html
@@ -13,7 +13,7 @@
 
                     <div ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe, 'both': status.favorite && status.shareByMe }">
                         <div class="pull-left background-image-fffix statusitem-img">
-                            <a ui-sref="home.profile.statuses({ email: status.email })">
+                            <a ui-sref="profileStatuses({ email: status.username })">
                                 <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                             </a>
                         </div>
@@ -21,7 +21,7 @@
                             <h5 class="statusitem-name">
                                 <small ng-if="status.type == 'SHARE'">
                                     <span class="glyphicon glyphicon-retweet">&nbsp;</span>
-                                    <a ui-sref="home.profile.statuses({ email: status.email })">
+                                    <a ui-sref="ProfileStatuses({ email: status.email })">
                                         <span class="text-muted">@{{ status.sharedByEmail }}</span>
                                     </a>
                                     <span translate="status.shared"></span>
@@ -29,7 +29,7 @@
                                 </small>
                                 <span ng-if="status.type == 'MENTION_SHARE'" class="glyphicon glyphicon-retweet">&nbsp;</span>
                                 <span ng-if="status.type == 'MENTION_FRIEND'" class="glyphicon glyphicon-user">&nbsp;</span>
-                                <a ui-sref="home.profile.statuses({ email: status.email })">
+                                <a ui-sref="profileStatuses({ email: status.username })">
                                     <strong>{{ status.firstName + ' ' + status.lastName }}</strong>
                                     <small>@{{ status.username }}</small>
                                 </a>
@@ -37,7 +37,7 @@
                                 <span ng-if="status.type == 'MENTION_FRIEND'" translate="status.followed"></span>
                                 <small> · </small>
                                 <!-- Replace hover title with hover bubble -->
-                                <a ui-sref="home.status({ statusId: status.statusId })">
+                                <a ui-sref="status({ statusId: status.statusId })">
                                     <!--English-->
                                     <small ng-if="!isOneDayOrMore(status.statusDate) && getLanguageKey() == 'en'" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY' }}" am-time-ago="status.statusDate"></small>
                                     <small ng-if="isOneDayOrMore(status.statusDate) && getLanguageKey() == 'en'" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY' }}">{{ status.statusDate | amDateFormat:'MMM D' }}</small>
@@ -64,16 +64,15 @@
                             </small>
 
                             <small ng-if="status.type === 'ANNOUNCEMENT'">
-                                <span class="glyphicon glyphicon-bullhorn">
-                                    {{ 'status.isAnnounced' | translate }}
-                                </span>
+                                <span class="glyphicon glyphicon-bullhorn"></span>
+                                <span translate="status.isAnnounced"></span>
                                 <a ui-sref="home.status({ statusId: status.sharedByUsername })">@{{ status.sharedByUsername }}</a>
                             </small>
 
                             <small ng-if="status.replyTo && status.type !== 'ANNOUNCEMENT'">
                                 <span class="glyphicon glyphicon-share-alt"></span>
                                 <span translate="status.replyTo"></span>
-                                <a ui-sref="home.status({ statusId: status.replyTo })">@{{ status.replyToUsername }}</a>
+                                <a ui-sref="status({ statusId: status.statusId })">@{{ status.replyToUsername }}</a>
                                 <br>
                             </small>
 
@@ -100,7 +99,7 @@
                                     <span class="badge">{{ status.shares.length }}</span>
                                     <div>
                                         <span ng-repeat="user in status.shares">
-                                            <a ui-sref="home.profile.statuses({ email: user.email })">
+                                            <a ui-sref="profileStatuses({ email: user.email })">
                                                 <div class="img img-rounded img-small share-img-fffix" ng-attr-title="@{{ user.username }}" ng-style="{ 'background-image': 'url(' + user.avatarURL + ')' }"></div>
                                             </a>
                                         </span>
